@@ -119,6 +119,7 @@ upper
 var_pop
 var_samp
 variance
+weekofyear
 when
 year
 |
